# matrix_mult

./: .travis.yml  Cargo.toml  README.md
benches/: matrix_mult.rs
examples/: bench_join_adaptive.rs  bench_repartition_speedup.rs  bench_seq_blas.rs  benchmark_adaptive_size.rs  benchmark_strategy_f32.rs  log_join_adaptative.rs  log_join_mult.rs  log_par.rs  log_seq.rs
src/: benchmark.rs  faster_vec.rs  lib.rs  main.rs  matrix.rs  matrix_adaptive.rs  my_ndarray.rs  naive_sequential.rs  rayon_mult.rs  split.rs  vectorisation.rs  vectorisation_packed_simd.rs
